# cloco-nepal-internship-2025

./: .gitignore
2025-01-21/Cron Task/: monitor_processes.sh
2025-01-22/Basic landing page/: BurgerShop.css  BurgerShop.html
2025-01-22/Landing Page using flexbox and gridbox/: demo.css  demo.html
2025-01-23/Changing Paragraph/: index.html  index.js
2025-01-23/Form Validation/: FormVal.html  FormVal.js  styles.css
2025-01-24/: formValJson.js  formvalJson.css  formvalJson.html
2025-01-27/High Order Function/: detail.js  try.html  try.js
2025-01-30/To-Do-list/: package-lock.json  package.json
2025-01-30/To-Do-list/src/: App.tsx  TodoList.tsx  index.css
2025-02-06/ReactLifeCycleUsingJs/: package-lock.json  package.json
2025-02-06/ReactLifeCycleUsingJs/src/: App.jsx  Nav.jsx
2025-02-06/django-postgres/env/: pyvenv.cfg
2025-02-06/django-postgres/myenv/: pyvenv.cfg
2025-02-21/mydjangoapp/appThree/: manage.py  pyproject.toml
2025-02-21/mydjangoapp/appThree/appThree/: asgi.py  settings.py  urls.py  wsgi.py
2025-02-21/mydjangoapp/appThree/polls/: models.py  views.py
2025-02-21/mydjangoapp/appThree/polls/migrations/: 0001_initial.py
2025-02-21/mydjangoapp/appThree/polls/static/polls/: style.css
2025-02-21/mydjangoapp/appThree/polls/templates/polls/: detail.html  index.html
2025-02-27/appFour/: db.sqlite3  manage.py
2025-02-27/djangocalc/: db.sqlite3  manage.py
2025-03-04/JWTAUTH/: db.sqlite3  manage.py
2025-03-04/toDoList/: db.sqlite3
BookStore/bookstore/: package-lock.json  package.json
bash_script_task/: Day1Task.sh
(+126 files in other folders)
