[tool.poetry]
name = "appthree"
version = "1.8.2"
description = "A description of your project"
authors = ["Luzza Dangol <luzzadangol12@gmail.com>"]
license = "n"  
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"  
psycopg2 = "^2.9"  
psycopg = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
